--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,14 +12,19 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.foodorderingapplication.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:id="@+id/nav_daily_meal"
+        android:name="com.example.foodorderingapplication.ui.gallery.DailyMealFragment"
+        android:label="Daily Meal"
+        tools:layout="@layout/daily_meal_fragment" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.foodorderingapplication.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_favourite"
+        android:name="com.example.foodorderingapplication.ui.slideshow.FavouriteFragment"
+        android:label="Favourite"
+        tools:layout="@layout/fragment_favourite" />
+    <fragment
+        android:id="@+id/myCartFragment"
+        android:name="com.example.foodorderingapplication.MyCartFragment"
+        android:label="My Cart"
+        tools:layout="@layout/fragment_my_cart" />
 </navigation>
