--- a/app/src/main/res/drawable/foreground_design.xml
+++ b/app/src/main/res/drawable/foreground_design.xml
@@ -5,6 +5,6 @@
         android:angle="90"
         android:startColor="#aa000000"
         android:endColor="#aa000000"
-        ></gradient>
-    <corners android:radius="0dp"></corners>
+        />
+    <corners android:radius="0dp"/>
 </shape>
