--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -73,6 +73,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button"
         android:textAlignment="center"
+        android:onClick="login"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
