--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -23,7 +23,7 @@
         android:label="Favourite"
         tools:layout="@layout/fragment_favourite" />
     <fragment
-        android:id="@+id/myCartFragment"
+        android:id="@+id/nav_my_cart"
         android:name="com.example.foodorderingapplication.MyCartFragment"
         android:label="My Cart"
         tools:layout="@layout/fragment_my_cart" />
