--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,7 +49,7 @@
 
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/email"
         android:layout_width="330dp"
         android:layout_height="48dp"
         android:backgroundTint="#CCCCCC"
@@ -65,7 +65,7 @@
         />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/password"
         android:layout_width="330dp"
         android:layout_height="48dp"
         android:backgroundTint="#CCCCCC"
@@ -76,13 +76,13 @@
         app:layout_constraintWidth_percent=".8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText"
+        app:layout_constraintTop_toBottomOf="@+id/email"
         android:layout_marginTop="10dp"
         />
 
     <Button
-        android:id="@+id/button"
-        android:onClick="mainActivity"
+        android:id="@+id/loginButton"
+
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/btn_bg_desigm"
@@ -93,7 +93,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editText2"
+        app:layout_constraintTop_toBottomOf="@id/password"
         app:layout_constraintWidth_percent=".8"
         app:layout_constraintVertical_bias=".6"
         />
@@ -110,7 +110,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/button"
+        app:layout_constraintTop_toBottomOf="@id/loginButton"
         />
 
     <TextView
@@ -121,10 +121,11 @@
         android:textSize="18sp"
         android:textStyle="bold"
         android:textColor="@color/purple_200"
+        android:onClick="register"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@id/button"
+        app:layout_constraintTop_toBottomOf="@id/loginButton"
         app:layout_constraintHorizontal_bias="0"
         />
 
