--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -48,7 +48,7 @@
         />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/newName"
         android:layout_width="330dp"
         android:layout_height="48dp"
         android:layout_marginTop="30dp"
@@ -64,7 +64,7 @@
         />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/newEmail"
         android:layout_width="330dp"
         android:layout_height="48dp"
         android:backgroundTint="#CCCCCC"
@@ -75,12 +75,12 @@
         app:layout_constraintWidth_percent=".8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText"
+        app:layout_constraintTop_toBottomOf="@+id/newName"
         android:layout_marginTop="10dp"
         />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/newPassword"
         android:layout_width="330dp"
         android:layout_height="48dp"
         android:backgroundTint="#CCCCCC"
@@ -91,13 +91,13 @@
         app:layout_constraintWidth_percent=".8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2"
+        app:layout_constraintTop_toBottomOf="@+id/newEmail"
         android:layout_marginTop="10dp"
         />
 
     <Button
-        android:id="@+id/button"
-        android:onClick="mainActivity"
+        android:id="@+id/newRegisterButton"
+
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/btn_bg_desigm"
@@ -108,7 +108,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editText3"
+        app:layout_constraintTop_toBottomOf="@id/newPassword"
         app:layout_constraintWidth_percent=".8"
         app:layout_constraintVertical_bias=".6"
         />
@@ -124,7 +124,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/button"
+        app:layout_constraintTop_toBottomOf="@id/newRegisterButton"
         />
 
     <TextView
@@ -139,7 +139,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@id/button"
+        app:layout_constraintTop_toBottomOf="@id/newRegisterButton"
         app:layout_constraintHorizontal_bias="0"
         />
 
