--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -24,7 +24,7 @@
         tools:layout="@layout/fragment_favourite" />
     <fragment
         android:id="@+id/nav_my_cart"
-        android:name="com.example.foodorderingapplication.MyCartFragment"
+        android:name="com.example.foodorderingapplication.ui.MyCartFragment"
         android:label="My Cart"
         tools:layout="@layout/fragment_my_cart" />
 </navigation>
