Changed regex for email validation

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -57,6 +57,7 @@
         android:drawablePadding="13dp"
         android:hint="@string/email_address"
         android:textColorHint="@color/white"
+        android:textColor="@color/white"
         app:layout_constraintWidth_percent=".8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,6 +74,7 @@
         android:drawablePadding="13dp"
         android:hint="@string/password"
         android:textColorHint="@color/white"
+        android:textColor="@color/white"
         app:layout_constraintWidth_percent=".8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -106,7 +108,6 @@
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textStyle="bold"
-        android:onClick="register"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
