--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -57,6 +57,7 @@
         android:drawablePadding="13dp"
         android:hint="@string/full_name"
         android:textColorHint="@color/white"
+        android:textColor="@color/white"
         app:layout_constraintWidth_percent=".8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,6 +73,7 @@
         android:drawablePadding="13dp"
         android:hint="@string/email_address"
         android:textColorHint="@color/white"
+        android:textColor="@color/white"
         app:layout_constraintWidth_percent=".8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -88,6 +90,7 @@
         android:drawablePadding="13dp"
         android:hint="@string/password"
         android:textColorHint="@color/white"
+        android:textColor="@color/white"
         app:layout_constraintWidth_percent=".8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
