--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,7 +42,7 @@
             app:layout_constraintBottom_toBottomOf="@id/editText3"/>
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/textViewName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="6dp"
@@ -62,7 +62,7 @@
             android:text="What would you want?"
             android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewName" />
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/home_hor_rec"
             android:layout_width="match_parent"
