--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.RegistrationActivity">
+    tools:context=".activities.LoginActivity">
+
 
     <ImageView
         android:id="@+id/imageView3"
@@ -28,123 +29,114 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/imageView3"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias=".2"
-        />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/register"
+        android:layout_marginTop="30dp"
+        android:text="@string/sign_in"
+        android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="19sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        android:layout_marginTop="30dp"
-        android:textAlignment="center"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <EditText
-        android:id="@+id/newName"
-        android:layout_width="330dp"
+        android:id="@+id/email"
+        android:layout_width="292dp"
         android:layout_height="48dp"
-        android:layout_marginTop="30dp"
-        android:backgroundTint="#CCCCCC"
-        android:drawableLeft="@drawable/baseline_account_circle_24"
-        android:drawablePadding="13dp"
-        android:hint="@string/full_name"
-        android:textColorHint="@color/white"
-        android:textColor="@color/white"
-        app:layout_constraintWidth_percent=".8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
-        />
-
-    <EditText
-        android:id="@+id/newEmail"
-        android:layout_width="330dp"
-        android:layout_height="48dp"
+        android:layout_marginTop="20dp"
         android:backgroundTint="#CCCCCC"
         android:drawableLeft="@drawable/baseline_email_24"
         android:drawablePadding="13dp"
         android:hint="@string/email_address"
-        android:textColorHint="@color/white"
         android:textColor="@color/white"
-        app:layout_constraintWidth_percent=".8"
+        android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/newName"
-        android:layout_marginTop="10dp"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        app:layout_constraintWidth_percent=".8" />
 
     <EditText
-        android:id="@+id/newPassword"
-        android:layout_width="330dp"
+        android:id="@+id/password"
+        android:layout_width="292dp"
         android:layout_height="48dp"
+        android:layout_marginTop="10dp"
         android:backgroundTint="#CCCCCC"
         android:drawableLeft="@drawable/baseline_key_24"
         android:drawablePadding="13dp"
         android:hint="@string/password"
-        android:textColorHint="@color/white"
         android:textColor="@color/white"
-        app:layout_constraintWidth_percent=".8"
+        android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/newEmail"
-        android:layout_marginTop="10dp"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/email"
+        app:layout_constraintWidth_percent=".8" />
+
+    <ImageView
+        android:id="@+id/google_btn"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/google_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/password"
+        app:layout_constraintVertical_bias="0.083" />
 
     <Button
-        android:id="@+id/newRegisterButton"
+        android:id="@+id/loginButton"
 
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="356dp"
+        android:layout_height="61dp"
         android:background="@drawable/btn_bg_desigm"
         android:padding="14dp"
-        android:text="Register"
+        android:text="@string/sign_in"
         android:textAllCaps="false"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/newPassword"
-        app:layout_constraintWidth_percent=".8"
-        app:layout_constraintVertical_bias=".6"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/google_btn"
+        app:layout_constraintVertical_bias="0.144"
+        app:layout_constraintWidth_percent=".8" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Already Registered ?"
+        android:text="Don't Have an Account ?"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.355"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/newRegisterButton"
-        />
+        app:layout_constraintTop_toBottomOf="@id/loginButton"
+        app:layout_constraintVertical_bias="0.357" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:minHeight="48dp"
-        android:onClick="login"
-        android:text="@string/sign_in"
+        android:onClick="register"
+        android:text="@string/register"
         android:textAlignment="center"
         android:textColor="@color/purple_200"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintHorizontal_bias="0.15"
         app:layout_constraintStart_toEndOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@id/newRegisterButton" />
-
+        app:layout_constraintTop_toBottomOf="@id/loginButton"
+        app:layout_constraintVertical_bias="0.609" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
