--- a/app/src/main/res/layout/fragment_my_cart.xml
+++ b/app/src/main/res/layout/fragment_my_cart.xml
@@ -77,7 +77,7 @@
         ></TextView>
 
     <Button
-        android:id="@+id/newRegisterButton"
+        android:id="@+id/order"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/btn_bg_desigm"
